--- a/src/main/resources/templates/password-find.html
+++ b/src/main/resources/templates/password-find.html
@@ -7,7 +7,7 @@
   <meta name="renderer" content="webkit"/>
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"/>
   <title th:if="${systemTitle}" th:text="${systemTitle}"></title>
-  <title th:if="!${systemTitle}" th:text="Choerodon"></title>
+  <title th:if="!${systemTitle}" th:text="XforceCloud"></title>
   <link rel="stylesheet" type="text/css" href="../static/step.css"/>
   <link rel="shortcut icon" th:if="${favicon != null}" th:href="${favicon}"  type="image/x-icon"/>
   <link rel="shortcut icon" th:unless="${favicon != null}" th:href="${'../static/icon.ico'}"  type="image/x-icon"/>
