--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -147,6 +147,7 @@
             -moz-border-radius: 0 !important;
             border-radius: 0 !important;
             width: 100%;
+            background: -webkit-linear-gradient(left, #5DAC81, #A8D889, #A8D889, #5DAC81);
         }
         @font-face {
             font-family: 'FontAwesome';
