--- a/src/main/resources/templates/index-default.html
+++ b/src/main/resources/templates/index-default.html
@@ -19,7 +19,7 @@
   <script src="static/choerodon-ui.min.js"></script>
   <script src="static/login.js" type="text/babel"/>
   <title th:if="${systemTitle}" th:text="${systemTitle}"></title>
-  <title th:unless="${systemTitle}" th:text="Choerodon"></title>
+  <title th:unless="${systemTitle}" th:text="XforceCloud"></title>
   <style>
     html, body {
       padding: 0px;
@@ -36,6 +36,7 @@
       align-items: center;
       background-image: url('static/bg.svg');
       background-size: cover;
+      background: -webkit-linear-gradient(left, #5DAC81, #A8D889, #A8D889, #5DAC81);
     }
 
     .logoleft {
@@ -173,6 +174,7 @@
       width: 100%;
       height: 38px;
       margin-bottom: 52px;
+      background: -webkit-linear-gradient(left, #5DAC81, #A8D889, #A8D889, #5DAC81);
     }
 
 
