--- a/src/main/resources/templates/index-mobile.html
+++ b/src/main/resources/templates/index-mobile.html
@@ -14,7 +14,7 @@
     <script src="static/jquery.min.js"></script>
     <script th:src="@{static/mobile.js(t=${new java.util.Date().getTime()})}"></script>
     <title th:if="${systemTitle}" th:text="${systemTitle}"></title>
-    <title th:if="!${systemTitle}" th:text="Choerodon"></title>
+    <title th:if="!${systemTitle}" th:text="XforceCloud"></title>
     <style>
         html, body {
             padding: 0px;
@@ -23,6 +23,7 @@
             direction: ltr;
             width: 100%;
             height: 100%;
+            background: -webkit-linear-gradient(left, #5DAC81, #A8D889, #A8D889, #5DAC81);
         }
 
         .logoleft {
@@ -165,6 +166,7 @@
             -moz-border-radius: 0 !important;
             border-radius: 0 !important;
             width: 100%;
+            background: -webkit-linear-gradient(left, #5DAC81, #A8D889, #A8D889, #5DAC81);
         }
 
         @font-face {
