修改版权声明和界面样式

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -15,6 +15,7 @@
             font-size: 13px;
             line-height: 20px;
             direction: ltr;
+            background: -webkit-linear-gradient(left, #5DAC81, #A8D889, #A8D889, #5DAC81);
         }
         .login .logo {
             width: 247px;
@@ -147,6 +148,7 @@
             -moz-border-radius: 0 !important;
             border-radius: 0 !important;
             width: 100%;
+            background: -webkit-linear-gradient(left, #5DAC81, #A8D889, #A8D889, #5DAC81);
         }
         @font-face {
             font-family: 'FontAwesome';
