--- a/src/main/resources/templates/index-default.html
+++ b/src/main/resources/templates/index-default.html
@@ -36,6 +36,7 @@
       align-items: center;
       background-image: url('static/bg.svg');
       background-size: cover;
+      background: -webkit-linear-gradient(left, #5DAC81, #A8D889, #A8D889, #5DAC81);
     }
 
     .logoleft {
@@ -173,6 +174,7 @@
       width: 100%;
       height: 38px;
       margin-bottom: 52px;
+      background: -webkit-linear-gradient(left, #5DAC81, #A8D889, #A8D889, #5DAC81);
     }
 
 
@@ -360,7 +362,7 @@
     </div>
   </form>
 </div>
-<div style="position:absolute;z-index:999;bottom:10px;color:#555;font-size: 12px;">Copyright © The choerodon Author®.
+<div style="position:absolute;z-index:999;bottom:10px;color:#555;font-size: 12px;">Copyright © The XforceCloud Author®.
   All rights reserved.
 </div>
 
