--- a/src/main/resources/templates/index-mobile.html
+++ b/src/main/resources/templates/index-mobile.html
@@ -23,6 +23,7 @@
             direction: ltr;
             width: 100%;
             height: 100%;
+            background: -webkit-linear-gradient(left, #5DAC81, #A8D889, #A8D889, #5DAC81);
         }
 
         .logoleft {
@@ -165,6 +166,7 @@
             -moz-border-radius: 0 !important;
             border-radius: 0 !important;
             width: 100%;
+            background: -webkit-linear-gradient(left, #5DAC81, #A8D889, #A8D889, #5DAC81);
         }
 
         @font-face {
@@ -295,7 +297,7 @@
 </div>
 
 <div style="position:absolute;z-index:999;bottom:1.875rem;color: rgba(0,0,0,0.43);font-size: 0.75rem;width: 100%;text-align: center;">
-    Copyright © The choerodon Author®. All rights reserved.
+    Copyright © The XforceCloud Author®. All rights reserved.
 </div>
 </body>
 </html>
