--- a/src/main/resources/templates/password-find.html
+++ b/src/main/resources/templates/password-find.html
@@ -35,6 +35,7 @@
       align-items: center;
       background-image: url('../static/bg.svg');
       background-size: cover;
+      background: -webkit-linear-gradient(left, #5DAC81, #A8D889, #A8D889, #5DAC81);
     }
 
     .congratulation {
@@ -201,6 +202,7 @@
       border-radius: 2px !important;
       width: 100%;
       height: 38px;
+      background: -webkit-linear-gradient(left, #5DAC81, #A8D889, #A8D889, #5DAC81);
     }
 
     .ant-btn-flat.ant-btn-loading span {
@@ -329,7 +331,7 @@
     </div>
   <!--</form>-->
 </div>
-<div style="position:absolute;z-index:999;bottom:10px;color:#555;font-size: 12px;">Copyright © The choerodon Author®.
+<div style="position:absolute;z-index:999;bottom:10px;color:#555;font-size: 12px;">Copyright © The XforceCloud Author®.
   All rights reserved.
 </div>
 <script src="../static/password-find.js" type="text/babel"/>
