修改版权声明和界面样式

--- a/src/main/resources/templates/index-default.html
+++ b/src/main/resources/templates/index-default.html
@@ -360,7 +360,7 @@
     </div>
   </form>
 </div>
-<div style="position:absolute;z-index:999;bottom:10px;color:#555;font-size: 12px;">Copyright © The choerodon Author®.
+<div style="position:absolute;z-index:999;bottom:10px;color:#555;font-size: 12px;">Copyright © The XforceCloud Author®.
   All rights reserved.
 </div>
 
